UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Phoenix_Bid_Hold_History__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Bid_Approval_Status__c</fullName>
        <label>Bid Approval Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>Bid Hold History</relationshipLabel>
        <relationshipName>Bid_Hold_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_SCM_Marketing__c</fullName>
        <label>Approval Team at Hold</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SCM&amp;Marketing</fullName>
                </value>
                <value>
                    <fullName>SCM</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_hold_duration__c</fullName>
        <formula>24 * (Phoenix_release_time__c  -  Phoenix_hold_time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Duration(hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_hold_time__c</fullName>
        <label>Hold Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_release_time__c</fullName>
        <label>Release Time</label>
        <type>DateTime</type>
    </fields>
    <label>Bid Hold History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Bid__c</columns>
        <columns>Phoenix_Bid_Approval_Status__c</columns>
        <columns>Phoenix_SCM_Marketing__c</columns>
        <columns>Phoenix_hold_time__c</columns>
        <columns>Phoenix_release_time__c</columns>
        <columns>Phoenix_hold_duration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BidHoldHistory-{000000}</displayFormat>
        <label>Bid Hold History No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bid Hold History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>